fix: x-scrollbar when animate fix: leet langage

--- a/phmatray-home/style.less
+++ b/phmatray-home/style.less
@@ -3,6 +3,7 @@ body {
     color: #fff;
     font-family: 'Segoe UI';
     font-size: 16px;
+    overflow-x: hidden; // no x-scrollbar because animation
 }
 
 a {
